EMP_MGMT/src/platform/kube/emp-mgmt-deploy-v1.yaml
# Emp_Mgmt services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: employee-mgmt
  namespace: employee-mgmt
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: emp-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-demo
  namespace: employee-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emp-demo
      version: v1
  template:
    metadata:
      labels:
        app: emp-demo
        version: v1
    spec:
      containers:
        - name: emp-demo-app
          image: demoapp2020/emp-mgmt:1.0.0.19
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
