EMP_MGMT/src/platform/kube/emp-mgmt-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-demo-postgresql
  namespace: employee-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emp-demo-postgresql
  template:
    metadata:
      labels:
        app: emp-demo-postgresql
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: postgres
          image: postgres:12.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  name: emp-demo-postgresql
  namespace: employee-mgmt
spec:
  selector:
    app: emp-demo-postgresql
  ports:
    - port: 5432
