EMP_MGMT/src/platform/kube/employee-mgmt-ds.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ds-employee-mgmt
spec:
  host: employee-mgmt
  subsets:
  - name: v1
    labels:
      version: v1
